<resources>
    <string name="app_name">DevFest SPB</string>
    <string name="tag">Android</string>
    <string name="author">Artur Vasilov</string>
    <string name="info">Многие Android-разработчики знают стандартные методы профилирования приложений, инструменты для отладки и улучшения производительности.  Однако для случая больших приложений этого не всегда достаточно. Мы поговорим о нестандартных способах ускорения работы приложений, затронем самые разные аспекты, как воспросы UI, так и инструментов и околосервисных вещей. Я надеюсь, что этот доклад заставит вас посмотреть на вопросы производительности по-новому и подумать о том, что вы можете сделать в своём приложении. </string>
    <string name="title">Как мы ускоряем Яндекс под Android</string>
    <string name="menu">Вce доклады</string>
    <string name="authorDescription">Изображение автора доклада</string>
    <string name="flagDescription">Изображение флага страны спикера</string>
    <string name="speakerInfo"> Android Developer with over five years of professional experience and love of creating extremely high-quality apps with perfect UI / UX and optimizations. Working at Yandex. GDG Leader. </string>
    <string name="room"> Room 1</string>
    <string name="report"> Как мы ускоряем Яндекс под Android </string>
    <string name="location"> St.Petersburg, Russia </string>
    <string name="position"> Senior Android Developer at Яндекс </string>
    <string name="time"> 15:25 </string>
    <string name="date"> 27 November </string>
</resources>
