<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marginField"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginFirstActivity"
        android:text="@string/title"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tag_1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tag_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginFirstActivity"
        android:layout_marginBottom="@dimen/marginFirstActivity"
        android:text="@string/tag"
        style="@style/tagStyle"
        app:layout_constraintBottom_toTopOf="@id/author"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginFirstActivity"
        android:layout_marginBottom="@dimen/marginFirstActivity"
        android:text="@string/author"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/infoScroll"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tag_1" />

    <ScrollView
        android:id="@+id/infoScroll"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/marginFirstActivity"
        android:layout_marginBottom="@dimen/marginFirstActivity"
        app:layout_constraintBottom_toTopOf="@id/backToMenu"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author">

        <TextView
            android:id="@+id/information"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/marginFirstActivity"
            android:layout_marginBottom="@dimen/marginFirstActivity"
            android:text="@string/info"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/backToMenu"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/author" />

    </ScrollView>

    <Button
        android:id="@+id/backToMenu"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginFirstActivity"
        android:background="@color/colorButton"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoScroll" />

</android.support.constraint.ConstraintLayout>